# sandbox

./: .gitattributes  .gitignore  README.md  appveyor.yml  azure-pipelines-template-python-check.yml  azure-pipelines-template.yml  azure-pipelines-template2.yml  azure-pipelines.yml  build-sphinx-doc.bat  githash.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---.md  1_bug.md  2_feature.md  3_question.md  4_other.md
.github/workflows/: main.yml
cxx11_sample/: CMakeLists.txt
cxx11_sample/src/: CDoNotCopy.cpp  CDoNotCopyMixedStyle.cpp  CDoNotCopyOldStyle.cpp  CDoNotCopySimple.cpp  CMovableTypeDoNotCopy.cpp  CSimple.cpp  StdAfx.cpp  StdAfx.h  cxx11_sample.h  wmain.cpp
patblt_speed_test/: CMakeLists.txt
patblt_speed_test/src/: CSpeedTest.cpp  CSpeedTest.h  QueryPerformanceCounter.h  StdAfx.h  winmain.cpp
source/: conf.py  index.rst
test/: UTF16LE.txt
